# ros2-salus-doble-antenas

./: .bashrc  .env.example  .gitignore  .vscodeignore  AGENTS.md  Dockerfile  PLAN.md  README.md  docker-compose.salus.yml  docker-compose.yml  entrypoint.sh  index.html  mapviz_gps.mvc  package-lock.json  package.json  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: config.rs  mod.rs  notifications.rs  terminal.rs  windows.rs
src/interfaces/: CMakeLists.txt  README.md  package.xml
src/interfaces/msg/: CmdVelFinal.msg  DriveTelemetry.msg  NavEvent.msg  NavSnapshotLayers.msg  NavTelemetry.msg  NoGoZone.msg  VisionTarget.msg
src/interfaces/srv/: CameraPan.srv  CameraStatus.srv  CancelNavGoal.srv  GetDatum.srv  GetKeepoutState.srv  GetNavSnapshot.srv  GetNavState.srv  GetZonesState.srv  SetDatum.srv  SetKeepoutZones.srv  SetManualCmd.srv  SetManualMode.srv  SetNavGoalLL.srv  SetZonesGeoJson.srv
src/navegacion_gps/: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN_GLOBAL_NAV_V2.md  LOCAL_NAV_V2.md  README.md  REAL_GLOBAL_V2_CHECKLIST.md  REAL_LOCAL_V2_CHECKLIST.md  SIM_LOCAL_V2_FIDELITY.md  package.xml  setup.cfg  setup.py
src/navegacion_gps/config/: .mapviz_config  bridge_config.yaml  bridge_config_v2.yaml  collision_monitor.yaml  collision_monitor_lidar_only.yaml  collision_monitor_v2.yaml  cyclonedds_wifi.xml  default-waypoints.yaml  dual_ekf_navsat_params.sim_decouple_global_linear_twist_only.yaml  dual_ekf_navsat_params.sim_decouple_global_yaw.yaml  dual_ekf_navsat_params.sim_navsat_imu_heading.yaml  dual_ekf_navsat_params.yaml  dual_gps_heading_ekf_overlay.yaml  keepout_mask.yaml  localization_global_v2.yaml  localization_v2.yaml  localization_v2_sim_gazebo_odom_overlay.yaml  nav2_global_v2_params.yaml  nav2_local_v2_no_keepout_overrides.yaml  nav2_local_v2_params.yaml  nav2_no_map_params.yaml  nav_benchmark_scenarios.yaml  navigate_through_poses_w_replanning_and_recovery_no_spin.xml  navigate_to_pose_w_replanning_and_recovery_no_spin.xml  navigation_profiles.yaml  no_go_zones.yaml  pointcloud_to_laserscan.yaml  rviz_global_v2.rviz  rviz_local_v2.rviz  rviz_nav2_full.rviz  saved_waypoints.yaml  ublox_dual_gps.yaml
src/navegacion_gps/launch/: dual_gps_heading_hw.launch.py  keepout_filters_v2.launch.py  localization_global_v2.launch.py  localization_v2.launch.py  nav2_only.launch.py  nav_global_v2.launch.py  nav_local_v2.launch.py  patrol_loop.launch.py  real.launch.py  real_global_v2.launch.py  real_local_v2.launch.py  replay_localization_global_v2.launch.py  rviz_real.launch.py  rviz_real_global_v2.launch.py  rviz_real_local_v2.launch.py  rviz_sim_global_v2.launch.py  sim_global_v2.launch.py  sim_local_v2.launch.py  sim_v2_base.launch.py  simulacion.launch.py
src/navegacion_gps/models/: cuatri.urdf  cuatri_2gps.urdf  cuatri_real.urdf  cuatri_ultrasound.urdf  modelo.urdf  my_robot.urdf
src/navegacion_gps/navegacion_gps/: ackermann_odometry.py  cmd_vel_ackermann_bridge_v2.py  cmd_vel_angular_smoother.py  datum_setter.py  dual_gps_heading_real.py  dual_gps_heading_sim.py  frame_math.py  gazebo_utils.py  global_imu_stationary_gate.py  global_odom_stationary_gate.py  global_yaw_stationary_hold.py  goal_pose_to_follow_path_v2.py  gps_course_heading.py  gps_course_heading_core.py  gps_profiles.py  heading_math.py  keepout_mask_utils.py  loop_patrol_runner.py  loop_waypoint_benchmark.py  loop_waypoint_benchmark_core.py  manual_waypoint_recorder.py  manual_waypoint_recorder_core.py  map_gps_absolute_measurement.py  nav_benchmark_report.py  nav_benchmark_runner.py  nav_benchmarking.py  nav_command_server.py  nav_observability.py  nav_snapshot_server.py  nav_status_gate.py  navheading_pose_bridge.py  navigation_profiles.py  path_cross_track_monitor.py  polygon_stamped_republisher.py  replay_localization_compare.py  scan_wifi_debug.py  sim_drive_telemetry.py  sim_global_straight_benchmark.py  sim_localization_benchmark.py  sim_sensor_normalizer_v2.py  (+5 more)
src/navegacion_gps/test/: test_ackermann_odometry.py  test_cmd_vel_ackermann_bridge_v2.py  test_cmd_vel_angular_smoother.py  test_dual_gps_heading_contracts.py  test_gazebo_utils.py  test_global_imu_stationary_gate.py  test_global_odom_stationary_gate.py  test_global_yaw_stationary_hold.py  test_goal_pose_to_follow_path_v2.py  test_gps_course_heading.py  test_gps_course_heading_core.py  test_gps_profiles.py  test_keepout_mask_utils.py  test_launch_contracts.py  test_nav_benchmarking.py  (+21 more)
(+222 files in other folders)
