<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navegacion_gps</name>
  <version>0.0.0</version>
  <description>Demo package for following GPS waypoints with nav2</description>
  <license>MIT</license>
  <maintainer email="todo@example.com">TODO</maintainer>

  <depend>navigation2</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_collision_monitor</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_velocity_smoother</depend>
  <depend>robot_localization</depend>
  <depend>geographic_msgs</depend>
  <depend>mapviz</depend>
  <depend>mapviz_plugins</depend>
  <depend>tile_map</depend>
  <depend>rclpy</depend>
  <depend>ament_index_python</depend>
  <depend>gazebo_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>pointcloud_to_laserscan</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>action_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>interfaces</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>rosgraph_msgs</depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>sensores</exec_depend>
  <exec_depend>controller_server</exec_depend>
  <exec_depend>map_tools</exec_depend>
  <exec_depend>ublox_gps</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
